--- a/AppCoder/templates/AppCoder/estudiantes.html
+++ b/AppCoder/templates/AppCoder/estudiantes.html
@@ -6,3 +6,6 @@
     <h1> Bienvenidos Estudiantes </h1>
 {% endblock %}
 
+{% block contenido_que_cambia %}
+    <h1>Hola Estudiantes</h1>
+{% endblock %}
