--- a/AppCoder/templates/AppCoder/padre.html
+++ b/AppCoder/templates/AppCoder/padre.html
@@ -43,8 +43,11 @@
                 </div>
             </div>
         </header>
+        <div class="container"> 
         {% block contenido_que_cambia %}
         {% endblock %}
+        </div>
+
         <section class="features-icons bg-light text-center">
             <div class="container">
                 <div class="row">
