--- a/AppCoder/templates/AppCoder/profesores.html
+++ b/AppCoder/templates/AppCoder/profesores.html
@@ -9,7 +9,7 @@
 {% block contenido_que_cambia %}
 
     <h1>Hola Profes</h1>
-    
+    <h2>{{ mensaje }}</h2>
     <form action="" method="post">
         {% csrf_token %}
         <table>
@@ -26,6 +26,7 @@
                 <th> Apellido </th>
                 <th> Email </th>
                 <th> Profesion </th>
+                <th> Opciones </th>
             </tr>
         </thead>
         <tbody>
@@ -46,6 +47,10 @@
                 </td>
                 <td>
                     {{ profesor.profesion }}
+                </td>
+                <td>
+                    <a class="btn btn-danger" href="{% url 'eliminar_profesor' profesor.id %}"> Eliminar </a>
+                    <a class="btn btn-primary" href="{% url 'editar_profesor' profesor.id %}"> Editar </a>
                 </td>
             </tr>
             {% endfor %}
