--- a/AppCoder/templates/AppCoder/estudiantes.html
+++ b/AppCoder/templates/AppCoder/estudiantes.html
@@ -10,7 +10,7 @@
 <h2>LISTADO DE ESTUDIANTES</h2>
 <ul>
 
-    {% for estudiante in object_list %}
+    {% for estudiante in estudiantes %}
     <li>
         
         {{ estudiante }}
