--- a/AppCoder/templates/AppCoder/estudiantes_original.html
+++ b/AppCoder/templates/AppCoder/estudiantes_original.html
@@ -3,6 +3,41 @@
 {% load static %}
 
 {% block titulo %}
+<h1 class="mb-5">ESTE TITULO VIENE DE ESTUDIANTES</h1>
+{% endblock %}
+
+{% block contenido_que_cambia %}
+<h2>LISTADO DE ESTUDIANTES</h2>
+<ul>
+
+    {% for estudiante in object_list %}
+    <li>
+        
+        {{ estudiante }}
+
+       
+    </li>
+    <a class="btn btn-danger" href="{% url 'estudiante_borrar' estudiante.id %}">Borrar</a>
+    <a class="btn btn-success" href="{% url 'estudiante_editar' estudiante.id %}">Editar</a>
+    
+    {% endfor %}
+    <br>
+    <br>
+    <a class="btn btn-primary" href="{% url 'estudiante_crear'  %}">AGREGAR ESTUDIANTE</a>
+    
+
+
+</ul>
+<h3>{{ mensaje }}</h3>
+
+{% endblock %}
+
+/////
+{% extends "AppCoder/padre.html" %}
+
+{% load static %}
+
+{% block titulo %}
     <h1> Bienvenidos Estudiantes </h1>
 {% endblock %}
 
@@ -13,7 +48,7 @@
 <form action="" method="post">
     {% csrf_token %}
     <table>
-    {{ form.as_table }}  Tipos de form: form.as_ / form.as_ul / form 
+    {{ form.as_table }} <!--Tipos de form: form.as_ / form.as_ul / form -->
     </table>
     <input type="submit" value="Agregar">
 </form>
