--- a/AppCoder/templates/AppCoder/padre.html
+++ b/AppCoder/templates/AppCoder/padre.html
@@ -21,10 +21,16 @@
         <nav class="navbar navbar-light bg-light static-top">
             <div class="container">
                 <a class="navbar-brand" href="{% url 'inicioApp' %}">Inicio</a>
+                {% if user.is_authenticated %}
                 <a class="btn btn-primary" href="{% url 'cursos' %}">Cursos</a>
                 <a class="btn btn-primary" href="{% url 'estudiantes' %}">Estudiantes</a>
                 <a class="btn btn-primary" href="{% url 'profesores' %}">Profesores</a>
                 <a class="btn btn-primary" href="{% url 'entregables' %}">Entregables</a>
+                <a class="btn btn-danger" href="{% url 'logout' %}">Logout</a>
+                {% else %}
+                <a class="btn btn-primary" href="{% url 'login' %}">Login</a>
+                <a class="btn btn-primary" href="{% url 'register' %}">Register</a>
+                {% endif %}
             </div>
         </nav>
         <!-- Masthead-->
